--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Build, Scan, Publish
 
 on:
-  workflow_dispatch:
-  #push:
-   # branches:
-    #  - main
+  workflow_call:
+    secrets:
+      Workflow2_PAT_TOKEN_GITHUB:
+        required: true
+
 jobs:
   build:
     name: Build, Scan, Publish
